<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc"
    tools:context="com.example.dhanraj.quartoproject.Room_Activity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bookthumbnail"
                android:layout_width="125dp"
                android:layout_height="170dp"
                android:background="#2d2d2d"
                android:layout_gravity="center"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/txttitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tittl"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#edecec"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/fullname" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/address_title"
                android:textStyle="bold"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="18dp"
                android:text="Actual_Address"
                android:textSize="20dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/phonetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Phone_Title"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="18dp"
                android:text="Actual PhoneNo"
                android:textSize="20dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/features"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Features Title"
                android:textSize="21sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/feafea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_margin="18dp"
                android:text="Actual Features"
                android:textSize="20dp"
                android:textStyle="italic" />



        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>